--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 #spring.aplication.name = Api
 
 #conexion quemada a la base de datos
-server.servlet.context-path=/crudtareas
+server.servlet.context-path=/app
 server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/crud_tareas_springboot
 spring.datasource.username=root
